# Kashef

./: .gitignore  README.md  pyproject.toml
src/: README.md  logger.py
src/autogenWork/: OAI_CONFIG_LIST
src/autogenWork/multipleAgents/: MultipleAgents.py  constants.py  logger.py
src/autogenWork/multipleAgents/logs/: 16_04_24_16_19_log.txt  16_04_24_16_38_log.txt  16_04_24_16_41_log.txt  16_04_24_16_45_log.txt  16_04_24_16_47_log.txt  16_04_24_16_51_log.txt  16_04_24_16_54_log.txt  16_04_24_16_57_log.txt  16_04_24_17_00_log.txt  16_04_24_17_02_log.txt  16_04_24_17_03_log.txt  16_04_24_17_05_log.txt  16_04_24_17_09_log.txt  16_04_24_17_10_log.txt  16_04_24_17_12_log.txt  16_04_24_17_14_log.txt  16_04_24_17_15_log.txt  16_04_24_17_18_log.txt  16_04_24_17_19_log.txt  16_04_24_17_22_log.txt  16_04_24_17_30_log.txt  16_04_24_17_31_log.txt  16_04_24_17_34_log.txt  16_04_24_17_37_log.txt  16_04_24_17_43_log.txt  16_04_24_17_51_log.txt  16_04_24_18_32_log.txt  16_04_24_18_34_log.txt  16_04_24_18_37_log.txt  16_04_24_18_45_log.txt  16_04_24_18_51_log.txt  16_04_24_18_55_log.txt  16_04_24_18_58_log.txt  16_04_24_19_10_log.txt  16_04_24_19_15_log.txt  16_04_24_19_21_log.txt  16_04_24_19_31_log.txt  16_04_24_19_33_log.txt  16_04_24_20_16_log.txt  16_04_24_20_18_log.txt  (+55 more)
src/autogenWork/multipleAgents/logs/gpt-3.5-turbo-0125/boutique_task/: 19_04_24_14_29_40_log.txt  19_04_24_14_39_43_log.txt  19_04_24_14_45_01_log.txt  19_04_24_15_24_57_log.txt  19_04_24_15_31_10_log.txt  19_04_24_15_36_15_log.txt  19_04_24_15_38_15_log.txt  19_04_24_15_42_36_log.txt  19_04_24_15_47_34_log.txt  (+2 more)
(+89 files in other folders)
